# TrajAgent

./: .gitignore  .your_env  pyproject.toml  run.txt  run_single_agent.py  run_single_agent2.py  run_single_agent_step2.py
agent/: agent_util.py
agent/engine/: __init__.py  base.py  case.py  openai_vl.py
agent/prompts/: case.md
agent/run_agent/: gpt5_multiturn_vl.py  openai_vl.py
agent/utils/: _openai_wrapper_impl.py  batch_manager.py  cache_manager.py  data_io.py  debug.py  eth_data_loader.py  image_io.py  json_utils.py  openai_wrapper.py  prompt_template.py  provider_adapters.py  request_builder.py  traj_draw.py  util.py  vllm_power.py
data_loader/: eth_data_loader.py  eth_data_loader_base.py  eth_data_loader_frame.py  eth_data_loader_updated.py  sdd_data_loader_base.py  util.py
prompts/: system.md  user.md  user_step1.md  user_step2.md
run_agent/: helper.py  run_agent_single.py  run_case.py
